--- a/content/posts/2.md
+++ b/content/posts/2.md
@@ -1,11 +1,11 @@
 ---
-title: "Security"
+title: "MFA Settings"
 date: 2023-01-25
 draft: false
 tags: ["Security","Microsoft"]
 series: "Most Important Security Configurations for M365"
 ---
 
-#test
+*test*
 
 hi
